@@ -1,15 +1,9 @@
-# Tcl package index file, version 1.1
-# This file is generated by the "pkg_mkIndex" command
-# and sourced either when an application starts up or
-# by a "package unknown" script.  It invokes the
-# "package ifneeded" command to set up package-related
-# information so that packages will be loaded automatically
-# in response to "package require" commands.  When this
-# script is sourced, the variable $dir must contain the
-# full path name of this file's directory.
+# pkgIndex.tcl -
+#
+# $Id: pkgIndex.tcl,v 1.11 2004/07/23 20:39:17 patthoyts Exp $
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded dns    1.1   [list source [file join $dir dns.tcl]]
+package ifneeded dns    1.2.0 [list source [file join $dir dns.tcl]]
 package ifneeded resolv 1.0.3 [list source [file join $dir resolv.tcl]]
 package ifneeded ip     1.0.0 [list source [file join $dir ip.tcl]]
-package ifneeded spf    1.0.0 [list source [file join $dir spf.tcl]]
+package ifneeded spf    1.1.0 [list source [file join $dir spf.tcl]]
